# DeskPilot

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/: CLAUDE.md
backend/app/: main.py
backend/app/agent/: CLAUDE.md  graph.py  intents.py  nodes.py  state.py  tool_calling.py
backend/app/api/: events.py  routes_browser.py  routes_chat.py  routes_context.py  routes_events.py  routes_settings.py  routes_tools.py
backend/app/browser/: bridge.py
backend/app/context/: browser_context.py  current_window.py  screenshot.py
backend/app/core/: config.py  paths.py
backend/app/db/: connection.py  repository.py
backend/app/memory/: repository.py  search.py
backend/app/rpa/: CLAUDE.md  input.py  ocr.py  screenshot.py  vision.py
backend/app/safety/: CLAUDE.md  approvals.py  policy.py  risk.py
backend/app/schemas/: common.py  events.py  tasks.py
backend/app/tools/: CLAUDE.md  base.py  registry.py
backend/tests/: test_health.py  test_tools.py
browser-extension/: CLAUDE.md  package-lock.json  package.json  tsconfig.json
browser-extension/public/: manifest.json  offscreen.html
browser-extension/scripts/: copy-public.mjs
browser-extension/src/: background.ts  content.ts  offscreen.ts
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/api/: client.ts
frontend/src/store/: taskStore.ts
frontend/src/styles/: index.css
report/: 开发规范.md  技术方案.md  接口与事件协议.md  数据库与记忆设计.md  第一阶段任务清单.md  项目骨架设计.md
(+6 files in other folders)
