[project]
name = "deskpilot"
version = "0.1.0"
description = "Windows desktop floating assistant powered by LangGraph, local RPA, and browser automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "openpyxl>=3.1.5",
    "playwright>=1.45.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "mss>=9.0.1",
    "opencv-python>=4.10.0.84",
    "pyautogui>=0.9.54",
    "paddleocr>=2.8.0",
    "psutil>=6.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
]

[project.scripts]
deskpilot-api = "backend.app.main:run"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
