[package]
name = "deskpilot"
version = "0.1.0"
description = "DeskPilot desktop shell"
authors = ["DeskPilot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
